--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [server]
 host = 0.0.0.0
 port = 65530
-timeout = 5
+timeout = 20
 [database]
 user = SYSTEM
 password = student
@@ -11,3 +11,4 @@ service = xe
 encoding = UTF-8
 [path]
 db_code = db.sql
+log = log.txt
